--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,40 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
+
     <Button
         android:id="@+id/shareText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Share Text"
-        android:onClick="shareText"/>
+        android:onClick="shareText"
+        android:layout_marginTop="94dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/shareImage"
+        android:layout_alignEnd="@+id/shareImage"
+        android:layout_alignLeft="@+id/shareImage"
+        android:layout_alignStart="@+id/shareImage" />
+
+    <Button
+        android:id="@+id/shareImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share Image"
+        android:onClick="shareImage"
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/shareImageText"
+        android:layout_alignEnd="@+id/shareImageText"
+        android:layout_alignLeft="@+id/shareImageText"
+        android:layout_alignStart="@+id/shareImageText" />
+
+    <Button
+        android:id="@+id/shareImageText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share Image Text"
+        android:onClick="shareImageText"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="89dp" />
 
 </RelativeLayout>
